--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.modules {
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = ["en"]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
@@ -144,6 +144,9 @@ play.http {
     # Sets the cookie to be accessed only by the server.
     #httpOnly = true
   }
+
+  # for play.filters.https.RedirectHttpsFilter
+  forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
 }
 
 ## Netty Provider
@@ -298,7 +301,11 @@ play.filters {
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
+  db.default.enabled = true
+
+  # Auto evolution apply
+  db.default.autoApply = true
+  db.default.autoApplyDowns = true
 }
 
 ## Database Connection Pool
