--- a/conf/application.conf
+++ b/conf/application.conf
@@ -354,6 +354,12 @@ db {
   default.logSql = true
 }
 
+# Ebean configuration
+# ~~~~~
+# You can declare as many Ebean servers as you want.
+# By convention, the default server is named `default`
+ebean.default = "models.*"
+
 # Play mailer configuration
 play.mailer {
   host = "smtp.sendgrid.net"
