--- a/conf/application.conf
+++ b/conf/application.conf
@@ -287,7 +287,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to localhost on ports 9000 (dev) and 19001 (default test) ports
-    allowed = ["localhost:9000", "localhost:19001", "poker-ai-portal.herokuapp.com"]
+    allowed = ["localhost:9000", "localhost:19001", ${HEROKU_APP_NAME}".herokuapp.com"]
   }
 }
 
